openshift/redis-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${REDIS_DEPLOYMENT_NAME}
spec:
  serviceName: ${REDIS_DEPLOYMENT_NAME}
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${REDIS_DEPLOYMENT_NAME}
  template:
    metadata:
      labels:
        app: ${REDIS_DEPLOYMENT_NAME}
    spec:
      containers:
      - name: ${REDIS_DEPLOYMENT_NAME}
        image: ${REDIS_IMAGE}
        imagePullPolicy: Always
        command: ["redis-server"]
        args: ["/etc/redis.conf"]
        ports:
        - containerPort: 6379
          name: ${REDIS_DEPLOYMENT_NAME}
        volumeMounts:
        - name: ${REDIS_DEPLOYMENT_NAME}-data
          emptyDir: {}
          mountPath: /data
        - name: ${REDIS_DEPLOYMENT_NAME}-config
          mountPath: /mnt/config-map
          configMap:
            name: ${REDIS_DEPLOYMENT_NAME}-config
            defaultMode: 420

      volumes:
        - name: ${REDIS_DEPLOYMENT_NAME}-data
          emptyDir: {}
        - name: ${REDIS_DEPLOYMENT_NAME}-config
          configMap:
            name: ${REDIS_DEPLOYMENT_NAME}-config
            defaultMode: 420
